# rune-game

./: CMakeLists.txt  README.md  clang-format-all
docs/: Gemfile  _config.yml  classical-cv.md  index.md  ml-approach.md
docs/_layouts/: template.html
metadata/: debugConfiguration.yml  masterConfiguration.yml  petalDetectorConfiguration.yml  plateDetectorConfiguration.yml  plateSelectorStripConfiguration.yml  runeCenterConfiguration.yml  runeGameDetectionConfiguration.yml  videoConfiguration.yml
src/: aixlog.hpp  binarize_image.cpp  binarize_image.hpp  center_finder.cpp  center_finder.hpp  center_roi_finder.cpp  center_roi_finder.hpp  filters.cpp  filters.hpp  main.cpp  petal_finder.cpp  petal_finder.hpp  plate_finder.cpp  plate_finder.hpp  plate_selector_strip_finder.cpp  plate_selector_strip_finder.hpp  settings.cpp  settings.hpp  target_plate_selector.cpp  target_plate_selector.hpp  utils.hpp  video_dumper.cpp  video_dumper.hpp
test-footage/: red_1_result.mkv
